force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_DescripcionArt__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DescripcionArt__c</fullName>
    <formula>DSALES_ProductoAdquirido__r.Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción del artículo</label>
    <type>Text</type>
</CustomField>