force-app/main/default/objects/DSALES_Certificado__c/fields/DSales_FechaFinGEX__c.field-meta.xml
<CustomField>
    <fullName>DSales_FechaFinGEX__c</fullName>
    <formula>IF( DSALES_Duracion_de_GEX__c = 12, ADDMONTHS(dSalesFechaInicioGarantiaExtendida__c,12),ADDMONTHS( dSalesFechaInicioGarantiaExtendida__c ,24))</formula>
    <label>Fecha fin de vigencia</label>
    <type>Date</type>
</CustomField>