force-app/main/default/objects/DSALES_Certificado__c/fields/DSales_Garantia_Coppel__c.field-meta.xml
<CustomField>
    <fullName>DSales_Garantia_Coppel__c</fullName>
    <label>Garantía Coppel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>