force-app/main/default/objects/DSALES_Certificado__c/fields/DSales_Motivo__c.field-meta.xml
<CustomField>
    <fullName>DSales_Motivo__c</fullName>
    <inlineHelpText>Motivo de cancelación o devolución</inlineHelpText>
    <label>Motivo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>