force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_SKUTangible__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SKUTangible__c</fullName>
    <label>Sku Tangible</label>
    <length>18</length>
    <type>Text</type>
</CustomField>