force-app/main/default/objects/DSALES_Certificado__c/fields/DSALES_TiendaId__c.field-meta.xml
<CustomField>
    <fullName>dsalesTiendaID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tienda</label>
    <referenceTo>Tienda__c</referenceTo>
    <relationshipLabel>Certificados</relationshipLabel>
    <relationshipName>Certificados</relationshipName>
    <type>Lookup</type>
</CustomField>