force-app/main/default/objects/DSALES_Certificado__c/fields/dSalesCausa__c.field-meta.xml
<CustomField>
    <fullName>dSalesCausa__c</fullName>
    <label>Causa</label>
    <length>250</length>
    <type>Text</type>
</CustomField>