force-app/main/default/objects/DSALES_Certificado__c/fields/dsalesEstatusServicioArmado__c.field-meta.xml
<CustomField>
    <fullName>dsalesEstatusServicioArmado__c</fullName>
    <description>Campo Estatus del Servicio de Armado en Objeto Certificado</description>
    <label>Estatus del Servicio de Armado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Agendado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>