force-app/main/default/objects/DSALES_Certificado__c/fields/dSalesFechaFinVigenciaCoppel__c.field-meta.xml
<CustomField>
    <fullName>dSalesFechaFinVigenciaCoppel__c</fullName>
    <formula>IF( DSales_Garantia_Coppel__c = &quot;12&quot;,   ADDMONTHS(DSALES_Fecha_Inicio_de_Vigencia__c,12),  ADDMONTHS(DSALES_Fecha_Inicio_de_Vigencia__c,24) )</formula>
    <label>Fecha fin garantía Coppel</label>
    <type>Date</type>
</CustomField>