force-app/main/default/objects/DSALES_Certificado__c/fields/dSalesFechaInicioGarantiaExtendida__c.field-meta.xml
<CustomField>
    <fullName>dSalesFechaInicioGarantiaExtendida__c</fullName>
    <formula>IF( DSales_Garantia_Coppel__c = &quot;&quot;,  DSALES_Fecha_de_compra_GEX__c , dSalesFechaFinVigenciaCoppel__c )</formula>
    <label>Fecha inicio garantía extendida</label>
    <type>Date</type>
</CustomField>