force-app/main/default/objects/DSALES_Certificado__c/fields/dsalesFechaPromesa__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaPromesa__c</fullName>
    <description>campo para registrar una fecha promesa de armado en Certificados</description>
    <label>Fecha Promesa</label>
    <type>Date</type>
</CustomField>