force-app/main/default/objects/DSALES_Certificado__c/fields/dsalesIdSecuencia__c.field-meta.xml
<CustomField>
    <fullName>dsalesIdSecuencia__c</fullName>
    <label>Id Secuencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>