force-app/main/default/objects/DSALES_Certificado__c/fields/DSalesNombreServicio__c.field-meta.xml
<CustomField>
    <fullName>DSalesNombreServicio__c</fullName>
    <label>Nombre de Servicio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>