force-app/main/default/objects/DSALES_Certificado__c/fields/dsalesPrecioSinIVA__c.field-meta.xml
<CustomField>
    <fullName>dsalesPrecioSinIVA__c</fullName>
    <label>Precio sin IVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>