force-app/main/default/objects/DSALES_Certificado__c/fields/dsalesVencido__c.field-meta.xml
<CustomField>
    <fullName>dsalesVencido__c</fullName>
    <formula>IF(  TODAY()   =  DSales_FechaFinGEX__c , true, false)</formula>
    <label>Vencido</label>
    <type>Checkbox</type>
</CustomField>