force-app/main/default/objects/DSALES_Certificado__c/recordTypes/dsalesArmadoMuebles.recordType-meta.xml
<RecordType>
    <fullName>dsalesArmadoMuebles</fullName>
    <active>true</active>
    <description>Tipo de registro para el servicio de armado de muebles</description>
    <label>Armado de Muebles</label>
</RecordType>