force-app/main/default/objects/DSALES_Certificado__c/recordTypes/dsalesGarantiaExtendida.recordType-meta.xml
<RecordType>
    <fullName>dsalesGarantiaExtendida</fullName>
    <active>true</active>
    <description>Tipo de registro para los certificados de Garantía Extendida</description>
    <label>Garantía Extendida</label>
</RecordType>